RESOLVED FIXED287241
[GStreamer] Video frame converter uses the wrong gl context
https://bugs.webkit.org/show_bug.cgi?id=287241
Summary [GStreamer] Video frame converter uses the wrong gl context
Carlos Garcia Campos
Reported 2025-02-07 05:55:43 PST
And it fails if the decoder is producing gl memory for external EOS texture because gldownload can't handle that
Attachments
Carlos Garcia Campos
Comment 1 2025-02-07 06:01:26 PST
EWS
Comment 2 2025-02-12 07:53:16 PST
Committed 290266@main (ba826db2307b): <https://commits.webkit.org/290266@main> Reviewed commits have been landed. Closing PR #40212 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-12 07:54:17 PST
Note You need to log in before you can comment on or make changes to this bug.