[GStreamer] Video frame converter uses the wrong gl context https://bugs.webkit.org/show_bug.cgi?id=287241

Reviewed by Philippe Normand.

For some reason the gl context set on the sink element is not propagated
to others, so set it in the pipeline instead. The converter also fails
if the decoder is producing gl memory ax external EOS texture, because
the gldownload element can't handle that. So, instead of downloaing and
then converting, we now convert using glcolorconvert and then download,
since glcolorconvert will produce a normal texture. But glcolorconvert
can't handle system memory, so we now use a different pipeline depending
on the input caps, using previous pipeline for system memory. This patch
also removes the sample download in videoFrameForCurrentTime() and
GStreamerInternalVideoEncoder::encode since that's already handled by
the converter later when needed. The pipeline is now also released when
not used after 30 seconds.

* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/webcodecs/videoFrame-canvasImageSource-expected.txt:
* LayoutTests/platform/wpe/media/media-source/media-source-paint-to-canvas-expected.txt: Removed.
* Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.cpp:
(WebCore::GStreamerVideoFrameConverter::Pipeline::Pipeline):
(WebCore::GStreamerVideoFrameConverter::Pipeline::run):
(WebCore::GStreamerVideoFrameConverter::singleton):
(WebCore::GStreamerVideoFrameConverter::GStreamerVideoFrameConverter):
(WebCore::GStreamerVideoFrameConverter::ensurePipeline):
(WebCore::GStreamerVideoFrameConverter::convert):
(WebCore::GStreamerVideoFrameConverter::releaseUnusedSystemMemoryPipelineTimerFired):
(WebCore::GStreamerVideoFrameConverter::releaseUnusedGLMemoryPipelineTimerFired):
(WebCore::GStreamerVideoFrameConverter::releaseUnusedDMABufMemoryPipelineTimerFired):
* Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.h:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::videoFrameForCurrentTime):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::GStreamerInternalVideoEncoder::encode):

Canonical link: https://commits.webkit.org/290266@main